--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-hook-form": "^7.53.1",
     "react-icons": "^5.5.0",
     "react-image-file-resizer": "^0.4.8",
+    "react-range": "^1.10.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.30.1",
     "react-toastify": "^10.0.6",
